<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/undo"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/redo"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_new_match"
        android:icon="@drawable/ic_new_match"
        android:title="@string/new_match"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about"
        app:showAsAction="ifRoom" />

</menu>